# create_ad_cut

./: .azd.yaml  .editorconfig  .gitignore  Makefile  README.AgenticDevOps.md  README.IaC.md  README.en.md  README.md  azure.yaml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml  cleanup-pr-preview.yml  deploy-backend.yml  deploy-frontend.yml  deploy-pr-preview.yml  deploy-prod.yml  e2e-playwright.yml  pr-preview.yml
backend/: .env.example  .tmp.json  Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  main.py  schemas.py
backend/app/prompts/: __init__.py  analysis_rules.md  style_headers.py  system.md
backend/app/routes/: analyze.py  board.py  gallery.py  generate.py  prompt.py  sessions.py  style_headers.py  whoami.py
backend/app/services/: __init__.py  aoai_analyze.py  aoai_image.py  blob.py  cosmos.py
backend/tests/: __init__.py  conftest.py  test_board.py  test_gallery.py  test_gallery_routes.py  test_prompt_assembly.py  test_routes_smoke.py
docs/: api.md  architecture.md  deployment.md  prompt-design.md
e2e/: .gitignore  package.json  playwright.config.ts
e2e/tests/: board.spec.ts
frontend/: index.html  package-lock.json  package.json  staticwebapp.config.json  vite.config.ts
frontend/public/: staticwebapp.config.json
frontend/src/: App.tsx  index.css  (+1 more)
infra/: abbreviations.json  main.bicep  main.parameters.json
reference/: index.html
scripts/: bootstrap-local.ps1  bootstrap-local.sh  grant-local-rbac.sh  setup-branch-protection.sh  setup-github-secrets.sh
(+22 files in other folders)
