[project]
name = "create-ad-cut-backend"
version = "0.1.0"
description = "FastAPI backend for create-ad-cut: AOAI multimodal analysis + gpt-image-2 generation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.54.0",
    "azure-identity>=1.19.0",
    "azure-storage-blob>=12.23.0",
    "azure-cosmos>=4.7.0",
    "Pillow>=11.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# B008: FastAPI dependency-injection pattern requires call-in-default.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
